# ece414_final_project

./: CMakeLists.txt  bmp180.c  bmp180.h  flight_controller.h  flight_controller_uart.h  imu.c  imu.h  main.c  timer.c
PROJECT_SAMPLE_EXAMPLES/: mpu6050_demo.c
fc/: CMakeLists.txt  MOTORTESTWORKING.cpp  barometer.cpp  barometer.h  crsf.cpp  crsf.h  dshot_encoder.cpp  dshot_encoder.h  dshot_pio.pio  flightcontroller.cpp  hc05.cpp  hc05.h  imu.cpp  imu.h  mutex_guard.h  pico_pio_loader.cpp  pico_pio_loader.h  timer.cpp
fc/web/: index.html
mpu6050_i2c/: CMakeLists.txt  imu.c  imu.h  mpu6050_i2c.c
